--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -16,6 +16,20 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="AppTheme_Modify" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">#2196F3</item>
+        <item name="colorPrimary">#2196F3</item>
+        <item name="colorPrimaryDark">#1976D2</item>
+        <item name="colorControlNormal">#2196F3</item>
+        <item name="colorControlHighlight">#1976D2</item>
+        <!--<item name="android:navigationBarColor">#33B5E5</item>-->
+
+        <!--<item name="android:actionBarStyle">@style/TranslucentActionBar</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowContentOverlay">@null</item>-->
+    </style>
+
     <style name="SettingsTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorAccent">#0288D1</item>
         <item name="colorPrimary">#03A9F4</item>
@@ -28,6 +42,20 @@
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="SettingsTheme_Modify" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">#3F51B5</item>
+        <item name="colorPrimary">#3F51B5</item>
+        <item name="colorPrimaryDark">#303F9F</item>
+        <item name="colorControlNormal">#3F51B5</item>
+        <item name="colorControlHighlight">#303F9F</item>
+        <!--<item name="android:navigationBarColor">#33B5E5</item>-->
+
+        <!--<item name="android:actionBarStyle">@style/TranslucentActionBar</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowContentOverlay">@null</item>-->
     </style>
 
     <style name="TranslucentActionBar" parent="Theme.AppCompat.Light.NoActionBar">
